--- a/package.json
+++ b/package.json
@@ -10,21 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "canvas-confetti": "^1.9.2",
+    "dexie": "^3.2.4",
+    "ethers": "^6.9.0",
+    "framer-motion": "^10.16.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "ethers": "^6.9.0",
-    "framer-motion": "^10.16.0",
-    "react-router-dom": "^6.20.0",
-    "canvas-confetti": "^1.9.2",
     "react-hot-toast": "^2.4.1",
-    "dexie": "^3.2.4"
+    "react-router-dom": "^6.20.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@types/canvas-confetti": "^1.6.4",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
